<resources>
    <string name="app_name">MeModule</string>
    <string name="my_order">我的订单</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_pay_type">我的支付方式</string>
    <string name="english">英文</string>
    <string name="mine">我的</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_publish">我的发布</string>
    <string name="my_care">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="bank_card_pay">微信支付</string>
    <string name="toPay">去支付</string>
    <string name="pay_type">支付方式</string>
    <string name="message">消息</string>
    <string name="message_reply">留言回复</string>
    <string name="personal_message">个人私信</string>
    <string name="who_likes_me">谁赞了我</string>
    <string name="avatar">头像</string>
    <string name="logout">退出登录</string>
    <string name="nick_name">昵称</string>
    <string name="set_phone">修改手机</string>
    <string name="set_password">修改密码</string>
    <string name="personal_data">个人资料</string>
    <string name="tech_exchange">技术交流</string>
    <string name="mechanical_demand">机械需求</string>
    <string name="mechanical_supply">机械供给</string>
    <string name="job_wanted">求职</string>
    <string name="recruit">招聘</string>
    <string name="empty">清空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_it">联系Ta</string>
    <string name="receive_invitation">接受邀请</string>
</resources>
