<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PersonalInfoActivity"
        android:orientation="vertical">

    <com.game.base.wdget.HeaderView
            android:id="@+id/mPerInfoHead"
            android:layout_width="match_parent"
            android:layout_height="44dp"/>

    <RelativeLayout
            android:id="@+id/mPerAvatarRl"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:background="@android:color/white"
            android:layout_height="52dp">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/avatar"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/mainTextColor"
                android:layout_height="match_parent"/>

        <ImageView
                android:id="@+id/mPerInfoAvaNex"
                android:layout_alignParentRight="true"
                android:layout_width="36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/next"
                android:scaleType="centerInside"
                android:layout_height="40dp"/>

        <ImageView
                android:layout_toLeftOf="@+id/mPerInfoAvaNex"
                android:src="@drawable/default_header"
                android:layout_centerVertical="true"
                android:layout_width="45dp"
                android:layout_height="45dp"/>
    </RelativeLayout>

    <View
            style="@style/MarginLeft15Line"/>

    <RelativeLayout
            android:id="@+id/mPerNickRl"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:background="@android:color/white"
            android:layout_height="52dp">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/nick_name"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/mainTextColor"
                android:layout_height="match_parent"/>

        <ImageView
                android:id="@+id/mPerInfoNickNex"
                android:layout_alignParentRight="true"
                android:layout_width="36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/next"
                android:scaleType="centerInside"
                android:layout_height="40dp"/>

        <TextView
                android:id="@+id/mPerNickNameTv"
                android:layout_toLeftOf="@+id/mPerInfoNickNex"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="往事随风如烟"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/mPerPhoneRl"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_height="52dp">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/set_phone"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/mainTextColor"
                android:layout_height="match_parent"/>

        <ImageView
                android:id="@+id/mPerInfoPhoneNex"
                android:layout_alignParentRight="true"
                android:layout_width="36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/next"
                android:scaleType="centerInside"
                android:layout_height="40dp"/>

        <TextView
                android:id="@+id/mPerPhoneNum"
                android:layout_toLeftOf="@+id/mPerInfoPhoneNex"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                tools:text="178****9700"
                android:gravity="center"
                android:layout_height="match_parent"/>
    </RelativeLayout>

    <View
            style="@style/MarginLeft15Line"/>

    <RelativeLayout
            android:id="@+id/mPerPwdRl"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:layout_height="52dp">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/set_password"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/mainTextColor"
                android:layout_height="match_parent"/>

        <ImageView
                android:id="@+id/mPerInfoPwdNex"
                android:layout_alignParentRight="true"
                android:layout_width="36dp"
                android:layout_centerVertical="true"
                android:src="@drawable/next"
                android:scaleType="centerInside"
                android:layout_height="40dp"/>
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <TextView
            android:text="@string/logout"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@android:color/white"
            android:textColor="@color/logoutTextColor"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="51dp"/>
</LinearLayout>